Multi Cluster/Cluster 1/curl-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curl-pod
spec:
  containers:
  - name: curl-container
    image: curlimages/curl
    command: ["sleep", "infinity"]
