Multi Cluster/Cluster 1/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: factory1-service-destination-rule
spec:
  host: factory1-service.default.global
  subsets:
  - name: v1
    labels:
      version: v1
