Multi Cluster/Cluster 1/factory2-service-entry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: factory1-service-entry
spec:
  hosts:
  - factory1-service.default.svc.cluster.local
  location: MESH_INTERNAL
  ports:
  - number: 80
    name: http
    protocol: HTTP
  resolution: DNS
  endpoints:
  - address: IP_EXTERNAL_FACTORY_OBTIDO_COM:'kubectl get nodes -o wide'
    ports:
      http: 80
