Multi Cluster/Cluster 1/istio-config.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: portal
spec:
  hosts:
  - "*"
  gateways:
  - portal-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: portal-service.default.svc.cluster.local
        port:
          number: 80
    corsPolicy:
      allowOrigin:
      - "*"
      allowMethods:
      - GET
      - POST
      - PUT
      - DELETE
      - PATCH
      - OPTIONS
      allowHeaders:
      - "authorization"
      - "content-type"
      maxAge: "24h"
