Multi Cluster/Cluster 1/portal-istio-config.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: portal-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: portal
spec:
  hosts:
  - "*"
  gateways:
  - portal-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: portal-service.default.svc.cluster.local
        port:
          number: 80
