Multi Cluster/Cluster 1/service-entry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: factory1-service-entry
spec:
  hosts:
  - factory1-service.default.global
  location: MESH_INTERNAL
  ports:
  - number: 80
    name: http
    protocol: HTTP
  resolution: DNS
  endpoints:
  - address: factory1-service.default.svc.cluster.local
    ports:
      http: 80
