Multi Cluster/Cluster 1/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: factory1-service-virtual-service
spec:
  hosts:
  - factory1-service.default.global
  http:
  - route:
    - destination:
        host: factory1-service.default.svc.cluster.local
        subset: v1
      weight: 100
